# python_module_with_meson

./: meson.build  pyproject.toml
src/: mymath.c  test.py
